@@ -1,10 +1,6 @@
 package com.modoospace.reservation.service;
 
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.assertAll;
-import static org.mockito.Mockito.mock;
-
+import com.modoospace.AbstractIntegrationContainerBaseTest;
 import com.modoospace.alarm.producer.AlarmProducer;
 import com.modoospace.common.exception.ConflictingReservationException;
 import com.modoospace.common.exception.PermissionDeniedException;
@@ -15,35 +11,32 @@ import com.modoospace.member.service.MemberService;
 import com.modoospace.reservation.controller.dto.AvailabilityTimeResponse;
 import com.modoospace.reservation.controller.dto.ReservationCreateRequest;
 import com.modoospace.reservation.controller.dto.ReservationResponse;
+import com.modoospace.reservation.controller.dto.TimeResponse;
 import com.modoospace.reservation.domain.ReservationRepository;
 import com.modoospace.reservation.domain.ReservationStatus;
 import com.modoospace.reservation.repository.ReservationQueryRepository;
 import com.modoospace.reservation.serivce.ReservationService;
 import com.modoospace.space.controller.dto.facility.FacilityCreateRequest;
 import com.modoospace.space.controller.dto.timeSetting.TimeSettingCreateRequest;
-import com.modoospace.space.domain.Category;
-import com.modoospace.space.domain.CategoryRepository;
-import com.modoospace.space.domain.Facility;
-import com.modoospace.space.domain.FacilityRepository;
-import com.modoospace.space.domain.ScheduleRepository;
-import com.modoospace.space.domain.Space;
-import com.modoospace.space.domain.SpaceRepository;
+import com.modoospace.space.domain.*;
 import com.modoospace.space.repository.ScheduleQueryRepository;
-import java.time.LocalDate;
-import java.util.Arrays;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.transaction.annotation.Transactional;
 
-@SpringBootTest
-@ActiveProfiles("test")
+import java.time.LocalDate;
+import java.util.List;
+
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
+import static org.mockito.Mockito.mock;
+
 @Transactional
-public class ReservationServiceTest {
+public class ReservationServiceTest extends AbstractIntegrationContainerBaseTest {
 
     @Autowired
     private MemberRepository memberRepository;
@@ -88,54 +81,54 @@ public class ReservationServiceTest {
     public void setUp() {
         AlarmProducer alarmProducerMock = mock(AlarmProducer.class);
         reservationService = new ReservationService(memberService, facilityRepository,
-            scheduleRepository, scheduleQueryRepository, reservationRepository,
-            reservationQueryRepository, alarmProducerMock);
+                scheduleRepository, scheduleQueryRepository, reservationRepository,
+                reservationQueryRepository, alarmProducerMock);
 
         hostMember = Member.builder()
-            .email("host@email")
-            .name("host")
-            .role(Role.HOST)
-            .build();
+                .email("host@email")
+                .name("host")
+                .role(Role.HOST)
+                .build();
         memberRepository.save(hostMember);
 
         visitorMember = Member.builder()
-            .email("visitor@email")
-            .name("visitor")
-            .role(Role.VISITOR)
-            .build();
+                .email("visitor@email")
+                .name("visitor")
+                .role(Role.VISITOR)
+                .build();
         memberRepository.save(visitorMember);
 
         Category category = new Category("스터디 공간");
         categoryRepository.save(category);
 
         Space space = Space.builder()
-            .name("공간이름")
-            .description("설명")
-            .category(category)
-            .host(hostMember)
-            .build();
+                .name("공간이름")
+                .description("설명")
+                .category(category)
+                .host(hostMember)
+                .build();
         spaceRepository.save(space);
 
         // TimeSetting, WeekSetting 기본값이 필요하여 Request 사용.
         FacilityCreateRequest createRequest1 = FacilityCreateRequest.builder()
-            .name("스터디룸")
-            .reservationEnable(true)
-            .minUser(1)
-            .maxUser(4)
-            .description("1~4인실 입니다.")
-            .timeSettings(
-                Arrays.asList(new TimeSettingCreateRequest(9, 24))
-            )
-            .build();
+                .name("스터디룸")
+                .reservationEnable(true)
+                .minUser(1)
+                .maxUser(4)
+                .description("1~4인실 입니다.")
+                .timeSettings(
+                        List.of(new TimeSettingCreateRequest(9, 24))
+                )
+                .build();
         facility1 = facilityRepository.save(createRequest1.toEntity(space));
 
         FacilityCreateRequest createRequest2 = FacilityCreateRequest.builder()
-            .name("스터디룸2")
-            .reservationEnable(true)
-            .minUser(3)
-            .maxUser(6)
-            .description("3~6인실 입니다.")
-            .build();
+                .name("스터디룸2")
+                .reservationEnable(true)
+                .minUser(3)
+                .maxUser(6)
+                .description("3~6인실 입니다.")
+                .build();
         facility2 = facilityRepository.save(createRequest2.toEntity(space));
 
         now = LocalDate.now();
@@ -145,24 +138,24 @@ public class ReservationServiceTest {
     @Test
     public void getAvailabilityTime() {
         AvailabilityTimeResponse retResponse = reservationService.getAvailabilityTime(facility1.getId(),
-            now);
+                now);
 
         // 9~23
         Assertions.assertThat(retResponse.getTimeResponses().stream()
-                .filter(timeResponse -> timeResponse.getAvailable()))
-            .hasSize(15);
+                        .filter(TimeResponse::getAvailable))
+                .hasSize(15);
     }
 
     @DisplayName("예약가능한 시간을 조회한다.(0시~24시)")
     @Test
     public void getAvailabilityTime_24Open() {
         AvailabilityTimeResponse retResponse = reservationService.getAvailabilityTime(facility2.getId(),
-            LocalDate.now());
+                LocalDate.now());
 
         // 0~23
         Assertions.assertThat(retResponse.getTimeResponses().stream()
-                .filter(timeResponse -> timeResponse.getAvailable()))
-            .hasSize(24);
+                        .filter(TimeResponse::getAvailable))
+                .hasSize(24);
     }
 
     @DisplayName("특정 날짜의 예약가능시간을 조회할 수 있다.(12~15시 예약존재)")
@@ -171,15 +164,15 @@ public class ReservationServiceTest {
         ReservationCreateRequest createRequest = new ReservationCreateRequest(3, now, 12, now, 15);
 
         reservationService.createReservation(createRequest, facility1.getId(),
-            visitorMember.getEmail());
+                visitorMember.getEmail());
 
         AvailabilityTimeResponse retResponse = reservationService.getAvailabilityTime(facility1.getId(),
-            LocalDate.now());
+                LocalDate.now());
 
         // 9시 ~ 12시, 15시 ~ 24시
         Assertions.assertThat(retResponse.getTimeResponses().stream()
-                .filter(timeResponse -> timeResponse.getAvailable()))
-            .hasSize(15 - 3);
+                        .filter(TimeResponse::getAvailable))
+                .hasSize(15 - 3);
     }
 
     @DisplayName("Visitor는 예약을 생성할 수 있다.")
@@ -188,15 +181,15 @@ public class ReservationServiceTest {
         ReservationCreateRequest createRequest = new ReservationCreateRequest(3, now, 18, now, 21);
 
         Long reservationId = reservationService.createReservation(createRequest, facility1.getId(),
-            visitorMember.getEmail());
+                visitorMember.getEmail());
 
         ReservationResponse retResponse = reservationService.findReservation(reservationId,
-            visitorMember.getEmail());
+                visitorMember.getEmail());
         assertAll(
-            () -> assertThat(retResponse.getId()).isEqualTo(reservationId),
-            () -> assertThat(retResponse.getFacility().getId()).isEqualTo(facility1.getId()),
-            () -> assertThat(retResponse.getMember().getId()).isEqualTo(visitorMember.getId()),
-            () -> assertThat(retResponse.getStatus()).isEqualTo(ReservationStatus.WAITING)
+                () -> assertThat(retResponse.getId()).isEqualTo(reservationId),
+                () -> assertThat(retResponse.getFacility().getId()).isEqualTo(facility1.getId()),
+                () -> assertThat(retResponse.getMember().getId()).isEqualTo(visitorMember.getId()),
+                () -> assertThat(retResponse.getStatus()).isEqualTo(ReservationStatus.WAITING)
         );
     }
 
@@ -205,12 +198,12 @@ public class ReservationServiceTest {
     public void createReservationRoom_throwException_ifOverlappingReservation() {
         ReservationCreateRequest createRequest = new ReservationCreateRequest(3, now, 12, now, 15);
         reservationService.createReservation(createRequest, facility1.getId(),
-            visitorMember.getEmail());
+                visitorMember.getEmail());
 
         ReservationCreateRequest createRequest2 = new ReservationCreateRequest(3, now, 13, now, 15);
         assertThatThrownBy(() -> reservationService
-            .createReservation(createRequest2, facility1.getId(), visitorMember.getEmail()))
-            .isInstanceOf(ConflictingReservationException.class);
+                .createReservation(createRequest2, facility1.getId(), visitorMember.getEmail()))
+                .isInstanceOf(ConflictingReservationException.class);
     }
 
     @DisplayName("방문자가 본인의 예약을 취소할 수 있다.")
@@ -218,16 +211,16 @@ public class ReservationServiceTest {
     public void cancelReservation() {
         ReservationCreateRequest createRequest = new ReservationCreateRequest(3, now, 12, now, 15);
         Long reservationId = reservationService
-            .createReservation(createRequest, facility1.getId(), visitorMember.getEmail());
+                .createReservation(createRequest, facility1.getId(), visitorMember.getEmail());
 
         reservationService.cancelReservation(reservationId, visitorMember.getEmail());
 
         ReservationResponse retResponse = reservationService
-            .findReservation(reservationId, visitorMember.getEmail());
+                .findReservation(reservationId, visitorMember.getEmail());
         assertAll(
-            () -> assertThat(retResponse.getId()).isEqualTo(reservationId),
-            () -> assertThat(retResponse.getMember().getEmail()).isEqualTo(visitorMember.getEmail()),
-            () -> assertThat(retResponse.getStatus()).isEqualTo(ReservationStatus.CANCELED)
+                () -> assertThat(retResponse.getId()).isEqualTo(reservationId),
+                () -> assertThat(retResponse.getMember().getEmail()).isEqualTo(visitorMember.getEmail()),
+                () -> assertThat(retResponse.getStatus()).isEqualTo(ReservationStatus.CANCELED)
         );
     }
 
@@ -236,12 +229,12 @@ public class ReservationServiceTest {
     public void cancelReservation_throwException_IfNotMyReservation() {
         ReservationCreateRequest createRequest = new ReservationCreateRequest(3, now, 12, now, 15);
         Long reservationId = reservationService
-            .createReservation(createRequest, facility1.getId(), visitorMember.getEmail());
+                .createReservation(createRequest, facility1.getId(), visitorMember.getEmail());
 
         assertAll(
-            () -> assertThatThrownBy(
-                () -> reservationService.cancelReservation(reservationId, hostMember.getEmail()))
-                .isInstanceOf(PermissionDeniedException.class)
+                () -> assertThatThrownBy(
+                        () -> reservationService.cancelReservation(reservationId, hostMember.getEmail()))
+                        .isInstanceOf(PermissionDeniedException.class)
         );
     }
 }
